--- a/Unify/Base.lproj/Main.storyboard
+++ b/Unify/Base.lproj/Main.storyboard
@@ -1296,7 +1296,7 @@
                 <navigationController storyboardIdentifier="ProfileVC" navigationBarHidden="YES" id="wbp-bP-tiH" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Profile" id="SLj-8d-qLN"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xVx-3S-WBA">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="xVx-3S-WBA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -2059,7 +2059,7 @@
             <objects>
                 <navigationController storyboardIdentifier="ActivityVC" navigationBarHidden="YES" id="1Oc-5A-vEL" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Activity" id="vMf-bf-9I9"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bx0-lP-1KU">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="bx0-lP-1KU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -2090,7 +2090,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="619"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wgn-P9-CU3">
-                                        <rect key="frame" x="8" y="78" width="359" height="181"/>
+                                        <rect key="frame" x="8" y="78" width="359" height="232"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rkU-bX-9Aw">
                                                 <rect key="frame" x="0.0" y="0.0" width="359" height="231"/>
@@ -2100,7 +2100,7 @@
                                                         <subviews>
                                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SWm-f4-sGK">
                                                                 <rect key="frame" x="0.0" y="47" width="359" height="44"/>
-                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="epv-De-DZ4">
                                                                     <size key="itemSize" width="40" height="40"/>
                                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -2255,8 +2255,8 @@
                                         <constraints>
                                             <constraint firstItem="rkU-bX-9Aw" firstAttribute="top" secondItem="Wgn-P9-CU3" secondAttribute="topMargin" constant="-8" id="CRn-Bc-66s"/>
                                             <constraint firstItem="rkU-bX-9Aw" firstAttribute="leading" secondItem="Wgn-P9-CU3" secondAttribute="leadingMargin" constant="-8" id="UBs-Zu-bvP"/>
-                                            <constraint firstAttribute="bottom" secondItem="rkU-bX-9Aw" secondAttribute="bottom" constant="-50" id="YWG-8a-L90"/>
-                                            <constraint firstAttribute="height" constant="181" id="fdt-yQ-MFC"/>
+                                            <constraint firstAttribute="bottom" secondItem="rkU-bX-9Aw" secondAttribute="bottom" constant="1" id="YWG-8a-L90"/>
+                                            <constraint firstAttribute="height" constant="232" id="fdt-yQ-MFC"/>
                                             <constraint firstItem="rkU-bX-9Aw" firstAttribute="trailing" secondItem="Wgn-P9-CU3" secondAttribute="trailingMargin" constant="8" id="jSg-Ua-mDG"/>
                                         </constraints>
                                     </view>
@@ -2308,7 +2308,7 @@
                                             <constraint firstAttribute="trailing" secondItem="410-RQ-GG8" secondAttribute="trailing" constant="8" id="kQO-wM-pSv"/>
                                         </constraints>
                                     </view>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="45" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DMh-hN-HXs">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="45" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DMh-hN-HXs">
                                         <rect key="frame" x="8" y="318" width="359" height="227"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
@@ -2471,7 +2471,7 @@
                                     <constraint firstItem="Wgn-P9-CU3" firstAttribute="trailing" secondItem="fhN-YU-Sca" secondAttribute="trailing" constant="-8" id="G6Z-g3-i5L"/>
                                     <constraint firstItem="Wgn-P9-CU3" firstAttribute="top" secondItem="59k-eC-6AZ" secondAttribute="top" constant="78" id="I1A-i8-oCg"/>
                                     <constraint firstItem="Xu9-sb-F2S" firstAttribute="leading" secondItem="59k-eC-6AZ" secondAttribute="leading" constant="8" id="Jal-is-l1v"/>
-                                    <constraint firstItem="DMh-hN-HXs" firstAttribute="top" secondItem="Wgn-P9-CU3" secondAttribute="bottom" constant="29" id="TI4-zz-NO2"/>
+                                    <constraint firstItem="DMh-hN-HXs" firstAttribute="top" secondItem="Wgn-P9-CU3" secondAttribute="bottom" constant="8" id="TI4-zz-NO2"/>
                                     <constraint firstItem="1CY-s5-cEx" firstAttribute="leading" secondItem="59k-eC-6AZ" secondAttribute="leading" id="TJE-2E-Pzm"/>
                                     <constraint firstAttribute="bottom" secondItem="fhN-YU-Sca" secondAttribute="bottom" id="bjC-9l-42F"/>
                                     <constraint firstAttribute="trailing" secondItem="DMh-hN-HXs" secondAttribute="trailing" constant="8" id="cmN-Gi-ZiF"/>
@@ -3902,7 +3902,7 @@
             <objects>
                 <navigationController storyboardIdentifier="ContactVC" navigationBarHidden="YES" id="pli-7b-Vvs" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Contacts" image="contactsicon" selectedImage="contactsicon" id="fnb-zs-j2f"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SOC-E3-VL8">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="SOC-E3-VL8">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -6547,7 +6547,7 @@
                 <navigationController storyboardIdentifier="RadarVC" navigationBarHidden="YES" id="xIZ-TC-ypV" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" id="CI6-FL-GhO"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="N9h-YD-6eO">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="N9h-YD-6eO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -10095,7 +10095,7 @@
         <scene sceneID="gZp-VV-fQI">
             <objects>
                 <collectionViewController id="tOI-Kc-32Q" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="O9M-i8-w5a">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="O9M-i8-w5a">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -10205,7 +10205,7 @@
                     <tabBarItem key="tabBarItem" title="Intro" id="0XH-iX-L6l"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="LSz-30-GH9"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JhS-bM-a1h">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="JhS-bM-a1h">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -10674,7 +10674,7 @@
             <objects>
                 <navigationController storyboardIdentifier="CalendarListVC" automaticallyAdjustsScrollViewInsets="NO" id="3Hr-sD-wAa" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yF5-iR-0Pf">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="yF5-iR-0Pf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -10928,7 +10928,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hQh-0Y-SfZ" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="wjm-wu-dQa">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="wjm-wu-dQa">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -10946,7 +10946,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PTb-kK-DfG" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VDD-zM-y3E">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="VDD-zM-y3E">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
