--- a/Unify/Base.lproj/Main.storyboard
+++ b/Unify/Base.lproj/Main.storyboard
@@ -3243,6 +3243,7 @@
                                                         <constraint firstAttribute="bottom" secondItem="Vj5-Om-SW7" secondAttribute="bottom" constant="10" id="VNW-OJ-HjP"/>
                                                         <constraint firstAttribute="trailing" secondItem="BDx-hM-mui" secondAttribute="trailing" constant="15" id="WyW-am-4Ty"/>
                                                         <constraint firstItem="Vj5-Om-SW7" firstAttribute="top" secondItem="BDx-hM-mui" secondAttribute="bottom" constant="3" id="Z81-0a-uqd"/>
+                                                        <constraint firstAttribute="bottom" secondItem="mXj-d9-oQi" secondAttribute="bottom" constant="5" id="ZUI-HH-xEV"/>
                                                         <constraint firstItem="BDx-hM-mui" firstAttribute="top" secondItem="GL4-cI-4gd" secondAttribute="top" constant="25" id="b6y-PS-BRs"/>
                                                         <constraint firstItem="BDx-hM-mui" firstAttribute="leading" secondItem="Vj5-Om-SW7" secondAttribute="leading" id="iba-Od-wP1"/>
                                                     </constraints>
@@ -3281,11 +3282,11 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pww-pE-Sur">
-                                                                    <rect key="frame" x="5" y="3" width="70" height="70"/>
+                                                                    <rect key="frame" x="5" y="1" width="70" height="70"/>
                                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="height" constant="70" id="HVJ-8A-kwp"/>
-                                                                        <constraint firstAttribute="width" constant="70" id="Hpj-TZ-uuT"/>
+                                                                        <constraint firstAttribute="width" constant="70" id="OaH-AS-IDd"/>
+                                                                        <constraint firstAttribute="height" constant="70" id="SVK-pq-3yX"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0ni-1k-Qh2">
@@ -3313,40 +3314,34 @@
                                                                     <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Approve" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Q1-U3-5zT">
-                                                                    <rect key="frame" x="305" y="22" width="55" height="21"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="21" id="BqF-iV-RaB"/>
-                                                                    </constraints>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                                    <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
                                                                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deny" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAr-FW-vLw">
-                                                                    <rect key="frame" x="305" y="46" width="55" height="21"/>
+                                                                    <rect key="frame" x="305" y="51" width="31" height="16"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <color key="textColor" red="1" green="0.38787269660000001" blue="0.32274025140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Approve" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Q1-U3-5zT">
+                                                                    <rect key="frame" x="290" y="20" width="80" height="21"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <constraints>
-                                                                <constraint firstItem="4Q1-U3-5zT" firstAttribute="trailing" secondItem="ZAr-FW-vLw" secondAttribute="trailing" id="12h-AC-MFt"/>
-                                                                <constraint firstItem="Pww-pE-Sur" firstAttribute="leading" secondItem="1fv-n2-nCj" secondAttribute="leading" constant="5" id="1iJ-6p-2bp"/>
+                                                                <constraint firstItem="0ni-1k-Qh2" firstAttribute="top" secondItem="4Q1-U3-5zT" secondAttribute="bottom" constant="10" id="2eH-7p-2lj"/>
                                                                 <constraint firstItem="0ni-1k-Qh2" firstAttribute="trailing" secondItem="1fv-n2-nCj" secondAttribute="trailingMargin" constant="-55" id="4N7-WX-xwd"/>
-                                                                <constraint firstItem="4Q1-U3-5zT" firstAttribute="top" secondItem="1fv-n2-nCj" secondAttribute="top" constant="22" id="BRh-Ui-2Kk"/>
-                                                                <constraint firstItem="Pww-pE-Sur" firstAttribute="top" secondItem="1fv-n2-nCj" secondAttribute="top" constant="3" id="UIz-3K-3dx"/>
+                                                                <constraint firstItem="4Q1-U3-5zT" firstAttribute="centerY" secondItem="Pww-pE-Sur" secondAttribute="centerY" constant="-5.5" id="A2s-C9-LP2"/>
+                                                                <constraint firstItem="4Q1-U3-5zT" firstAttribute="leading" secondItem="Mhg-Pa-CUF" secondAttribute="trailing" constant="13" id="IDZ-Iy-crk"/>
                                                                 <constraint firstItem="ZAr-FW-vLw" firstAttribute="bottom" secondItem="1fv-n2-nCj" secondAttribute="bottomMargin" id="XNf-mp-IKo"/>
-                                                                <constraint firstItem="Mhg-Pa-CUF" firstAttribute="leading" secondItem="Pww-pE-Sur" secondAttribute="trailing" constant="8" symbolic="YES" id="Zj2-SX-uh4"/>
-                                                                <constraint firstItem="ZAr-FW-vLw" firstAttribute="top" secondItem="4Q1-U3-5zT" secondAttribute="bottom" constant="3" id="Zq5-LZ-Yij"/>
+                                                                <constraint firstItem="Pww-pE-Sur" firstAttribute="leading" secondItem="1fv-n2-nCj" secondAttribute="leading" constant="5" id="aYW-UV-nK0"/>
                                                                 <constraint firstItem="0ni-1k-Qh2" firstAttribute="top" secondItem="Mhg-Pa-CUF" secondAttribute="bottom" constant="12" id="aoj-R3-BMR"/>
-                                                                <constraint firstItem="4Q1-U3-5zT" firstAttribute="leading" secondItem="ZAr-FW-vLw" secondAttribute="leading" id="cFR-gZ-Kd8"/>
                                                                 <constraint firstItem="Mhg-Pa-CUF" firstAttribute="top" secondItem="1fv-n2-nCj" secondAttribute="top" constant="6" id="cak-lq-UQN"/>
                                                                 <constraint firstItem="0ni-1k-Qh2" firstAttribute="leading" secondItem="1fv-n2-nCj" secondAttribute="leading" constant="83" id="dH2-2h-OvU"/>
                                                                 <constraint firstAttribute="bottom" secondItem="0ni-1k-Qh2" secondAttribute="bottom" constant="6" id="dcs-TE-1M3"/>
-                                                                <constraint firstAttribute="trailing" secondItem="4Q1-U3-5zT" secondAttribute="trailing" constant="15" id="jLa-wB-6Sf"/>
+                                                                <constraint firstItem="Pww-pE-Sur" firstAttribute="top" secondItem="1fv-n2-nCj" secondAttribute="top" constant="1" id="loA-tB-Oq1"/>
                                                                 <constraint firstItem="ZAr-FW-vLw" firstAttribute="leading" secondItem="0ni-1k-Qh2" secondAttribute="trailing" constant="-7" id="n33-Da-lR6"/>
-                                                                <constraint firstItem="Pww-pE-Sur" firstAttribute="centerY" secondItem="1fv-n2-nCj" secondAttribute="centerY" id="yns-Xu-SbF"/>
+                                                                <constraint firstAttribute="trailing" secondItem="4Q1-U3-5zT" secondAttribute="trailing" constant="5" id="qh9-cX-i5L"/>
                                                                 <constraint firstItem="0ni-1k-Qh2" firstAttribute="leading" secondItem="Mhg-Pa-CUF" secondAttribute="leading" id="zVX-fO-kWw"/>
                                                             </constraints>
                                                         </view>
@@ -7634,8 +7629,8 @@
                                                                         <constraint firstAttribute="height" constant="14" id="gCa-Fp-Pl8"/>
                                                                     </constraints>
                                                                 </imageView>
-                                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fv1-sg-LfM">
-                                                                    <rect key="frame" x="271" y="0.0" width="30" height="30"/>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fv1-sg-LfM">
+                                                                    <rect key="frame" x="271" y="2" width="30" height="30"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="30" id="jhN-4a-Kdf"/>
@@ -7657,8 +7652,8 @@
                                                                     <color key="textColor" red="0.015686274510000001" green="0.2901960784" blue="0.51764705879999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gKe-C5-Zp3">
-                                                                    <rect key="frame" x="314" y="1" width="30" height="30"/>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gKe-C5-Zp3">
+                                                                    <rect key="frame" x="314" y="3" width="30" height="30"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="30" id="ICh-Ay-nCX"/>
@@ -7674,13 +7669,13 @@
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="55" id="4x7-1T-S14"/>
-                                                                <constraint firstItem="gKe-C5-Zp3" firstAttribute="leading" secondItem="fv1-sg-LfM" secondAttribute="trailing" constant="15" id="9SY-bC-0eW"/>
-                                                                <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="centerY" secondItem="fv1-sg-LfM" secondAttribute="centerY" constant="2" id="CK2-xR-RnC"/>
-                                                                <constraint firstItem="gKe-C5-Zp3" firstAttribute="trailing" secondItem="rNw-ru-rvq" secondAttribute="trailingMargin" id="SwW-kK-6f3"/>
+                                                                <constraint firstItem="gKe-C5-Zp3" firstAttribute="leading" secondItem="fv1-sg-LfM" secondAttribute="trailing" constant="13" id="9SY-bC-0eW"/>
+                                                                <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="centerY" secondItem="fv1-sg-LfM" secondAttribute="centerY" id="CK2-xR-RnC"/>
+                                                                <constraint firstItem="gKe-C5-Zp3" firstAttribute="trailing" secondItem="rNw-ru-rvq" secondAttribute="trailingMargin" constant="-13" id="SwW-kK-6f3"/>
                                                                 <constraint firstItem="R1M-lA-ybx" firstAttribute="leading" secondItem="rNw-ru-rvq" secondAttribute="leading" id="TeE-PF-sas"/>
                                                                 <constraint firstItem="R1M-lA-ybx" firstAttribute="width" secondItem="rNw-ru-rvq" secondAttribute="width" id="dQK-yr-RJB"/>
                                                                 <constraint firstItem="R1M-lA-ybx" firstAttribute="top" secondItem="rNw-ru-rvq" secondAttribute="top" constant="28" id="dtw-vS-Vut"/>
-                                                                <constraint firstItem="fv1-sg-LfM" firstAttribute="baseline" secondItem="gKe-C5-Zp3" secondAttribute="baseline" id="h7x-6E-Cc1"/>
+                                                                <constraint firstItem="fv1-sg-LfM" firstAttribute="baseline" secondItem="gKe-C5-Zp3" secondAttribute="baseline" constant="-1" id="h7x-6E-Cc1"/>
                                                                 <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="leading" secondItem="rNw-ru-rvq" secondAttribute="leadingMargin" id="nIr-bW-6lS"/>
                                                                 <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="top" secondItem="rNw-ru-rvq" secondAttribute="top" constant="4" id="zQY-Vk-UOf"/>
                                                             </constraints>
